oops fix dialog on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -290,10 +290,12 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 90vw;
+  width: 80vw;
   max-width: 500px;
   max-height: 85vh;
   padding: 40px;
+  overflow-y: auto;
+  line-height: 1.5;
 
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
   z-index: $zindex-dialog;
@@ -311,7 +313,6 @@ button {
 
 .DialogDescription {
   margin: 10px 0 20px;
-  line-height: 1.5;
 }
 
 .mainDialogContent {
